# ai-assistant-suite3

./: .config_hash  .defaults_hash  .env.example  .gitignore  CLAUDE.md  README.md  bk.sh  bk2.sh  fn.sh  fn2.sh  package-lock.json  package.json  res.sh
backend/: .env.example  pyproject.toml
backend/app/: constants.py  main.py
backend/app/api/routes/: agents.py  auth.py  chat.py  log.py  notifications.py  settings.py  triggers.py
backend/app/config/: settings.py
backend/app/core/: agent.py  composio_client.py  contacts.py  email_summarizer.py  history_store.py  notifier.py  profile_store.py  session_store.py  token_store.py  trigger_store.py  wa_store.py
backend/app/models/: schemas.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/callback/: page.tsx
frontend/components/Auth/: ConnectButton.tsx
frontend/components/Chat/: ChatWindow.tsx  MessageBubble.tsx  MessageInput.tsx  SuggestionsPane.tsx
frontend/components/Notifications/: NotificationDrawer.tsx  NotificationListener.tsx  TriggerToast.tsx  WhatsAppSettings.tsx
frontend/components/Settings/: SettingsPanel.tsx
frontend/components/ui/: MarkdownContent.tsx  icons.tsx
frontend/lib/: agents.ts  api.ts  constants.ts  icons.ts  logger.ts  styles.ts  types.ts
